Use JDK 11